2013-08-19  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_tape.cc (mtinfo_drive::set_pos): Remove unneeded linebreak.
	(mtinfo_drive::get_status): Drop using get_ll when it's not required.

2013-08-14  Corinna Vinschen  <corinna@vinschen.de>

	* include/sys/cygwin.h (struct per_process): Add posix_memalign.  Reduce
	size of unused2 accordingly.
	* include/cygwin/version.h (CYGWIN_VERSION_API_MINOR): Bump.
	* lib/_cygwin_crt0_common.cc (_cygwin_crt0_common): Initialize
	u->posix_memalign with address of posix_memalign.
	* malloc_wrapper.cc (posix_memalign): Call user-provided posix_memalign
	rather than just returning ENOSYS.
	* globals.cc (__cygwin_user_data): Initialize posix_memalign member.

2013-08-09  Corinna Vinschen  <corinna@vinschen.de>

	* include/cygwin/version.h (CYGWIN_VERSION_DLL_MINOR): Bump to 24.

2013-08-07  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_base::open_fs): Fix indentation.

2013-07-31  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* fhandler_tty.cc: Revert accidental checkin.
	* update-copyright: Ditto.

2013-07-31  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* cygheap.cc (cmalloc): Use size_t for size field.
	(cmalloc_abort): Ditto.
	(crealloc): Ditto.
	(crealloc_abort): Ditto.
	(ccalloc): Ditto.
	(ccalloc_abort): Ditto.
	* cygheap_malloc.h (HEAP_USER): Add.
	(cmalloc): Use size_t for size field in declaration.
	(cmalloc_abort): Ditto.
	(crealloc): Ditto.
	(crealloc_abort): Ditto.
	(ccalloc): Ditto.
	(ccalloc_abort): Ditto.

2013-07-31  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (normalize_posix_path): Don't check existence of / or // dir
	in parent dir check.

2013-07-26  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* environ.cc (tty_is_gone): Delete.
	(known): Delete tty, add wincmdln.
	* globals.cc: Reorganize list of environment bools, remove explicit =
	false for slight load time optimization.
	(wincmdln): New global.
	* spawn.cc (child_info_spawn::worker): Honor wincmdln.
