@@ -1,5 +1,5 @@
 /* This struct of LC_MESSAGES data has been generated by fetching locale
-   data from a Linux system using glibc-2.16-28.fc18.x86_64 on 2013-03-30. */
+   data from a Linux system using glibc-2.17-11.fc19.x86_64 on 2013-08-19. */
 
 struct lc_msg_t
 {
@@ -39,6 +39,7 @@ static struct lc_msg_t lc_msg[] =
   { "ar_YE", L"^[\x0646yY].*", L"^[\x0644nN].*", L"\x0646\x0639\x0645", L"\x0644\x0627" },
   { "as_IN", L"^[yY\x09b9].*", L"^[nN\x09a8].*", L"\x09b9\x09df", L"\x09a8\x09b9\x09df" },
   { "ast_ES", L"^[sSyY].*", L"^[nN].*", L"", L"" },
+  { "ayc_PE", L"^[uUsSyY].*", L"^[jJnN].*", L"Ukhamawa", L"Janiwa" },
   { "az_AZ", L"^[Bb].*", L"^[YyNn].*", L"b\x0259li", L"yox" },
   { "be_BY", L"^[\x0422\x0442Yy].*", L"^[\x041d\x043dNn].*", L"", L"" },
   { "be_BY@latin", L"^[TtYy].*", L"^[Nn].*", L"", L"" },
@@ -161,6 +162,7 @@ static struct lc_msg_t lc_msg[] =
   { "ht_HT", L"^[ooyy].*", L"^[nn].*", L"", L"" },
   { "hu_HU", L"^[IiYy].*", L"^[nN].*", L"", L"" },
   { "hy_AM", L"^[yYsS\x0561\x0531]", L"^[nN\x0578\x0548]", L"\x0561\x0575\x0578", L"\x0578\x0579" },
+  { "ia_FR", L"^[sSyY].*", L"^[nN].*", L"Si", L"No" },
   { "id_ID", L"^[yY].*", L"^[tTnN].*", L"", L"" },
   { "ig_NG", L"^[EeIiYy].*", L"^[0MmNn].*", L"Ee", L"Mba" },
   { "ik_CA", L"[yYiIaA].*", L"[nNqQ].*", L"aa", L"qa\x00f1\x0061\x0061" },
@@ -209,6 +211,9 @@ static struct lc_msg_t lc_msg[] =
   { "nds_DE", L"^[jJyY].*", L"^[nN].*", L"", L"" },
   { "nds_NL", L"^[jJyY].*", L"^[nN].*", L"", L"" },
   { "ne_NP", L"^[yY].*", L"^[nN].*", L"", L"" },
+  { "nhn_MX", L"^[sSqQyY].*", L"^[nNaA].*", L"quema", L"ahmo" },
+  { "niu_NU", L"^[\x0113\x0112yY].*", L"^[nN].*", L"Talia", L"Nakai" },
+  { "niu_NZ", L"^[\x0113\x0112yY].*", L"^[nN].*", L"Talia", L"Nakai" },
   { "nl_AW", L"^[jJyY].*", L"^[nN].*", L"", L"" },
   { "nl_BE", L"^[jJyY].*", L"^[nN].*", L"", L"" },
   { "nl_BE@euro", L"^[jJyY].*", L"^[nN].*", L"", L"" },
@@ -267,6 +272,7 @@ static struct lc_msg_t lc_msg[] =
   { "sv_SE", L"^[jJyY].*", L"^[nN].*", L"", L"" },
   { "sw_KE", L"^[nNyY].*", L"^[hHlL].*", L"", L"" },
   { "sw_TZ", L"^[nNyY].*", L"^[hHlL].*", L"", L"" },
+  { "szl_PL", L"^[JjTtYy].*", L"^[nN].*", L"", L"" },
   { "ta_IN", L"^[\x0b86\x0bae\x0bcdyY]", L"^[\x0b87\x0bb2\x0bcd\x0bb2\x0bc8nN]", L"\x0b86\x0bae\x0bcd", L"\x0b87\x0bb2\x0bcd\x0bb2\x0bc8" },
   { "ta_LK", L"^[\x0b86\x0bae\x0bcdyY]", L"^[\x0b87\x0bb2\x0bcd\x0bb2\x0bc8nN]", L"\x0b86\x0bae\x0bcd", L"\x0b87\x0bb2\x0bcd\x0bb2\x0bc8" },
   { "te_IN", L"^[yY\x0c05].*", L"^[nN\x0c15].*", L"\x0c05\x0c35\x0c28\x0c41", L"\x0c15\x0c3e\x0c26\x0c41" },
@@ -283,7 +289,7 @@ static struct lc_msg_t lc_msg[] =
   { "ts_ZA", L"^[yY]", L"^[nN]", L"", L"" },
   { "tt_RU", L"^[\x0414\x0434Yy].*", L"^[\x041d\x043dNn].*", L"\x04d8\x0439\x0435", L"\x042e\x043a" },
   { "tt_RU@iqtelif", L"^[Ee].*", L"^[YyNn].*", L"ey\x00ed", L"yuq" },
-  { "ug_CN", L"^[1JjsSyYoO].*", L"^[0nN].*", L"yes", L"no" },
+  { "ug_CN", L"^[yY].*", L"^[nN].*", L"Yes", L"No" },
   { "uk_UA", L"^([Yy+]|[\x0422\x0442][\x0410\x0430][\x041a\x043a]?)$", L"^([Nn-]|[\x041d\x043d][\x0406\x0456])$", L"\x0442\x0430\x043a", L"\x043d\x0456" },
   { "unm_US", L"^[yY].*", L"^[kKmM].*", L"", L"" },
   { "ur_IN", L"^[\x06c1yY].*", L"^[\x0646nN].*", L"\x06c1\x0627\x06ba", L"\x0646\x06c1\x06cc\x06ba" },
