@@ -1,5 +1,13 @@
 2013-08-19  Corinna Vinschen  <corinna@vinschen.de>
 
+	* lc_msg.h: Regenerate.
+	* nlsfuncs.cc (__get_lcid_from_locale): Update list of Script-only
+	locales to Windows 8.
+	(__set_charset_from_locale): Take locales added with Windows 8 and 8.1
+	into account.
+
+2013-08-19  Corinna Vinschen  <corinna@vinschen.de>
+
 	* fhandler_tape.cc (mtinfo_drive::set_pos): Remove unneeded linebreak.
 	(mtinfo_drive::get_status): Drop using get_ll when it's not required.
 
